-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>
This issue relates to the following test suite run:
https://testing.whamcloud.com/test_sets/b46be262-bd73-4a2e-b1e1-bab749185dbe
test_98 failed with the following error on Ubuntu 24.04 and SLES15sp6:
Buffer overflow check failed
Test session details:
clients: https://build.whamcloud.com/job/lustre-b_es6_0/681 - 6.8.0-31-generic
servers: https://build.whamcloud.com/job/lustre-b_es6_0/681 - 3.10.0-1160.102.1.el7_lustre.ddn17.x86_64
It looks like newer kernels have changed the way that mount arguments are being processed, so this subtest is now "failing" because the mount is not rejecting the long mount option. It may be related to what "mount" is printing for the error message, or it may be that it is handling the mount options differently and they are not triggering an error when they are only PAGE_SIZE+8 bytes long.
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
conf-sanity test_98 - Buffer overflow check failed