LU-18081 tests: improve conf-sanity/98 testing

conf-sanity test_98 is failing for newer distros like Ubuntu 24.04
and SLES15sp6, which have newer userspace tools.

Print better error messages about what options are being processed
to help debug this issue.  It appears mount is now deduplicating
options passed on the command-line, which invalidates the test case.

Change test_98 to call mount.lustre directly to verify this handling.

Test-Parameters: trivial
Test-Parameters: testlist=conf-sanity env=ONLY=98 clientdistro=ubuntu2404
Signed-off-by: Andreas Dilger <adilger@whamcloud.com>
Change-Id: I34de0fdbd4ca36228d313b53251b5dbcfc502b07
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55891
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Frederick Dilger <fdilger@whamcloud.com>
Reviewed-by: Jian Yu <yujian@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Oleg Drokin <green@whamcloud.com>